# Competitive-Programming-Library

./: .bashrc  .clang-format  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Makefile  README.md  cmp.bash  gen_note.py  justfile  macro.cpp  notebook.aux  notebook.toc  short_macro.cpp  test_count_mandatory_nodes_on_single_path[1]_include.cmake  test_extended_euclidian_algorithm[1]_include.cmake  test_linear_diophantine_equation_solve[1]_include.cmake
2021 ICPC Gran Premio de Mexico 1ra Fecha/: Cypher Decypher.cpp  Escape Room.cpp  Fixing Subtitles.cpp  Introducing Teleporting Machine.cpp  Just Send the Email.cpp  Kids at the Party.cpp  Leonel and the powers of two.cpp
Becrowd/: 3173.py  3208(5).py  _1002(4).c  _1004(1).py  _1008(2).c  _1009(2).py  _1010(3).py  _1013(3).py  _1016(1).py  _1017(1).py  _1019(1).c  _1020(2).py  _1035(2).py  _1036(3).py  _1037(3).py  _1038(1).py  _1040(5).py  _1044(2).py  _1046(2).py  _1048(2).py  _1049(3).py  _1050(2).py  _1051(2).c  _1061(3).py  _1065(1).py  _1067(2).py  _1071(2).py  _1072(1).py  _1073(1).py  _1074(2).py  _1080(2).py  _1094(3).c  _1095(1).py  _1096(1).py  _1098(2).py  _1099(1).py  _1101(4).py  _1117(1).py  _1131(1).py  _1133(3).py  (+34 more)
CSES/: coin_combinations_I.cpp  coin_combinations_II.cpp  dice_combinations.cpp  dynamic_range_min_queries.cpp  dynamic_range_sum_queries.cpp  ferris_wheel.cpp  missing_number.cpp  number_spiral.py  palindrome_reorder.cpp  range_update_queries.cpp  static_range_minimum_queries.cpp  static_range_sum_queries.py  string_matching.c  sum_of_four_values.cpp  two_knights.py  two_sets.cpp
CodeChef/: TSORT.cpp
Codeforces/: 1008A.py  1029B.cpp  1093B.cpp  112A.cpp  1178B.cpp  1180A.cpp  1234A.cpp  1251A.cpp  1257C.cpp  1384A.cpp  1427B.cpp  1428C.cpp  1466B.cpp  1466C.cpp  1481A.cpp  1512C.cpp  1519B.cpp  1539B.cpp  1560D.cpp  1593C.cpp  1606A.cpp  1607A.cpp  1611B.cpp  1616B.cpp  1634A.py  1650A.cpp  1657A.cpp  1669B.cpp  1670A.cpp  1674C.cpp  1676C.cpp  1702A.cpp  1702B.cpp  1702C.cpp  1702D.cpp  1703B.cpp  1703D.cpp  1706A.cpp  1706B.cpp  1713B.cpp  (+84 more)
Neps/: a_idade_de_dona_monica.cpp  arquivos.cpp  bits.cpp  calcada_imperial.cpp  colorindo.cpp  estrategia_gulosa.py  eu_aprendi_o_mergesort.cpp  fibonacci.cpp  fissura_perigosa2.cpp  forca.cpp  garamana.cpp  lanche_na_empresa.cpp  ordenacao_simples.cpp  passa_bolinha.cpp  poligrama.cpp  quadrado.cpp  segredo_do_cofre.cpp  soma.cpp  supermecado.cpp  troca.cpp  uiquipedia2.cpp
OBI/: acelerador_de_particulas.cpp  aplicativo_de_calorias.cpp  arranha_ceu.cpp  arranha_ceu2.cpp  baralho.cpp  bingo.cpp  bolas.cpp  codigo.cpp  computador.cpp  corredor.c  dividindo_o_imperio.cpp  dona_minhoca.cpp  dona_minhoca2.cpp  fechadura.cpp  festa_olimpica.cpp  fliper.cpp  game_10.cpp  hotel.cpp  jogo_do_preto_e_branco.cpp  letras.cpp  magico.cpp  matriz_super_legal.cpp  mesa_redonda.cpp  metro_da_nlogonia.cpp  muro.cpp  musica_para_todos_2.cpp  nova_avenida.cpp  ortografia.cpp  passatempo.cpp  pedagio.cpp  po_que_mao.cpp  postes.cpp  quadrado.cpp  senha_da_vo_zinha.cpp  sequencia.cpp  torneio_de_tenis.cpp  uiquipedia.cpp  xadrez_aleatorio.cpp
SPOJ-sphere/: POSTERS.cpp  RMQSQ.cpp
UVA/: 10679.py  11151.cpp  468cpp  741.cpp
UVA-OJ/: 10585_2.cpp  10607.cpp  10679.cpp  11062.cpp  11797.cpp  120.cpp  12100.cpp  12959.cpp  13055.cpp  13190.cpp  554.cpp  727.cpp  855.cpp
algorithms/: allPrefixes.cpp  anagram_position.cpp  arrangement_rec.cpp  backtracking_subsets.cpp  binary_search.cpp  binary_search2.cpp  binary_search3.cpp  coin_change.cpp  combinatorics_no_repetitions.cpp  combinatorics_with_repetitions.cpp  dsu.cpp  edit_distance.cpp  fastExpMod.cpp  fast_exp.c  fast_pow.c  fast_pow.cpp  fatorialDynamic.cpp  hash.cpp  hashSubstrings.cpp  kadane_maxSubArrSum.cpp  kadane_maxSubArrSum_pos.cpp  kmp_occurrences.cpp  knapsack_backingtrack.cpp  knapsack_dp.cpp  kruskal.py  lis.cpp  log2_fast.cpp  lower_bound.cpp  lps.cpp  merge_sort.cpp  morris-pratt.c  perfect_square_bb.cpp  prefix_sum.py  recursive_permutation.cpp  segtree_bottomup.cpp  segtree_lazy_range.cpp  segtree_rmq_lazy_range.cpp  segtree_topdwon.cpp  sparse_table_rmq.cpp  ternary_search_recursive.cpp  (+2 more)
atCoder/: abc043_b.cpp  abc044_b.cpp  abc045_a.cpp  abc046_a.cpp  abc051_a.cpp  abc053_a.cpp  abc054_b.cpp  abc061_b.cpp  abc063_a.cpp  abc063_b.cpp  abc064_a.cpp  abc064_b.cpp  abc065_a.py  abc065_b.cpp  abc067_a.py  abc068_b.py  abc069_a.py  abc070_b.cpp  abc071_a.py  abc071_b.py  abc186_d.cpp  abc229_a.cpp  abc256A.cpp  abc256B.cpp  abc257_c.cpp  abc268_b.cpp  abc269_a.cpp  abc269_c.cpp  abc269_d.cpp  abc270_d.cpp  abc272_c.cpp  abc272_d.cpp  abc276_a.cpp  abc276_c.cpp  abc276_e.cpp  abc277_d.cpp  abc281_a.cpp  abc281_b.cpp  abc282_a.cpp  abc289_c.cpp  (+14 more)
google/: sort_the_fabrics.cpp  water_container_system.cpp
icpc/: K_contestants.cpp  displacing_particles.cpp  handling_the_blocks.cpp  invested_money.cpp  kiara_is_a_recursive_acronym.cpp  kimi_raikkonen.cpp  no_luck.cpp
leetCode/: combination-sum-iv.cpp
maratonasDF/: azulejos.cpp  bolo_de_foobar.cpp  c.py  chega_de_palindromos.cpp  complemento_de_2.cpp  forca_ii.cpp  metrica.cpp
maratonasDF_unballoon/: alerta.cpp  assento_de_aviao.cpp  consoantelandia.cpp  cupins_vs_tamanduas_a_revanche.cpp  direitos_humanos.py  discussao_de_natal.cpp  doadores_de_sange.cpp  hahtlehtichcoh.cpp  hotel_de_hilbert.cpp  impa_ou_pa.cpp  in1  in2  in3  in4  kampo_de_futebol.py  logica_do_talvez.cpp  oportunidade.cpp  otimizando_leitura.cpp  tep_tep_tep.cpp  (+2 more)
(+2303 files in other folders)
